style.css
/* ... */
@font-face {
	font-family: 'SourceCodeProRegular';
	font-style: normal;
	font-weight: normal;
    src: url('/wp-content/themes/tasty-beverage/font/source-code-pro/SourceCodePro-Regular-webfont.eot');
    src: url('/wp-content/themes/tasty-beverage/font/source-code-pro/SourceCodePro-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('/wp-content/themes/tasty-beverage/font/source-code-pro/SourceCodePro-Regular-webfont.woff') format('woff'),
         url('/wp-content/themes/tasty-beverage/font/source-code-pro/SourceCodePro-Regular-webfont.ttf') format('truetype'),
         url('/wp-content/themes/tasty-beverage/font/source-code-pro/SourceCodePro-Regular-webfont.svg#SourceCodeProRegular') format('svg');
}
h1 {
	font-family: 'SourceSansProSemibold', Helvetica;
	font-size: 32px;
	text-shadow: 1px 1px #fff;		
}
nav a {
	color: white;
	font-family: 'SourceSansProRegular', Helvetica;	
	font-size: 1.125em;
	text-shadow: 1px 1px #111;
}
code {
	color: #222;
	font-family: 'SourceCodeProRegular', Helvetica;
	font-size: 13px;
}

/* Layout */

body {
	background-image: url('img/tile.png');
	color: #000;
	font-family: sans-serif;
	font-size: 13px;
	height: 100%;
	margin-top: 30px;
	margin: 0;
	min-height: 100%;
	padding: 0;
	width: 100%;	
}
.mainNav {
	background: #222;
	float: left;
	width: 138px;
}
#wrap {
	max-width: 100%;
	padding: 0 23px 60px 161px;
}
#header {
	margin: 0;
}
#footer {
	background-color: #222;
	bottom: 0px;
	clear: both;
	color: #9d9da1;
	font-size: 11px;
	padding: 7px 0px;
	position: fixed;
	text-align: center;
	width: 100%;
}
.page-title {
	color: #222;
	font-family: 'SourceSansProSemiBold';
	font-weight: normal;
	margin: 0;
	padding: 10px 0px;
	text-shadow: 1px 1px #fff;
}
.page-title em {
	font-style: normal;
	font-weight: bold;
}
.body .pagination {
	display: block;
}
.pagination .nav-previous {
	float: right;
	margin-right: 128px;
	margin-top: 25px;
}
.nav-next {
	float: left;
	margin-left: 52px;
	margin-top: 25px;
}
.pagination a {
	color: #222;
	font-family: 'SourceSansProRegular', Helvetica;
	font-size: 20px;
	text-shadow: 1px 1px #fff;
}

/* Nav */
.mainNav a {
	display: inline-block;
	float: left;
	height: 55px;
	line-height: 55px;	
	padding: 0 0 0 20px;	
	width: 118px;
}
.mainNav a:hover {
	background-color: #333;
	text-decoration: none;
}
.logo {
	background-image: url('/wp-content/themes/tasty-beverage/img/logo.png');
	margin-bottom: 45px;
}
.meta-nav {
	display: none;
}
.nav-previous a {
	background: transparent url('img/arrow-right.png') no-repeat 100% 25%;
	padding-right: 20px;
}
.nav-next a {
	background: transparent url('img/arrow-left.png') no-repeat 0% 25%;
	padding-left: 20px;
}
/* Header */

#header .inner {
	border-bottom: 1px solid #adadad;
	height: 50px;		
	padding: 14px 0 0 0;
	width: 100%;
}
#header h1 {
	float: left;
	line-height: 0em;
}
#header form {
	display: block;
	float: right;
}
#header form input {
	background: #fff url('img/search.png') no-repeat 8px 50%;
	border: 1px solid #ababab;
	color: #999;	
	font-family: 'SourceSansProRegular';
	height: 29px;
	padding-left: 30px;
	width: 258px;
	-webkit-box-shadow: inset 0 2px 5px #ddd;
	box-shadow: inner 0 2px 5px #ddd;
	
}
#header form input[type="submit"] {
	display: none;
}
#header a.post-new-link,
#header a.post-new-link:visited {
	background: #999; /* Old browsers */
	background: -moz-linear-gradient(top, #999 0%, #666 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#999999), color-stop(100%,#666666)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #999 0%,#666 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #999 0%,#666 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, #999 0%,#666 100%); /* IE10+ */
	background: linear-gradient(top, #999 0%,#666 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999999', endColorstr='#666666',GradientType=0 ); /* IE6-9 */
	border: 1px solid #aaa;
	color: #fff;
	display: inline-block;
	float: right;
	padding: 5px 8px;
}
#header a.post-new-link:hover {
	background: #aaaaaa; /* Old browsers */
	background: -moz-linear-gradient(top, #aaaaaa 0%, #787878 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#aaaaaa), color-stop(100%,#787878)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #aaaaaa 0%,#787878 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #aaaaaa 0%,#787878 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, #aaaaaa 0%,#787878 100%); /* IE10+ */
	background: linear-gradient(top, #aaaaaa 0%,#787878 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aaaaaa', endColorstr='#787878',GradientType=0 ); /* IE6-9 */
	border: 1px solid #aaa;
}

/* Footer */
#footer a,
#footer a:visited {
	color: #fff;
	font-family: 'SourceSansProSemibold';
	font-size: 14px;
}

/* Content - Left Column */
.leftCol {
	float: left;
	margin-right:  20px;
	margin-top: 5px;
	text-shadow: 2px 2px #fff;
}
.leftCol ul {
	list-style-type: none;
	line-height: 0px;
	text-align: center;
}
.day {
	font-family: 'SourceSansProBold';
	font-size: 30px;
}
.month {
	font-family: 'SourceSansProSemiBold';
	font-size: 18px;
	margin-top: -6px;
	text-transform: uppercase;
}
.year {
	font-family: 'SourceSansProSemiBold';
	font-size: 14px;
	margin-top: -4px;
}

/* Posts */

.date-title {
	color: #999;
	font-size: 12px;
	font-weight: normal;
	margin: 0;
	padding: 10px;
	text-transform: uppercase;
	width: 50px;
}

article {
	font-family: 'SourceSansProRegular';
	font-size: 15px;
	margin: 0;
	padding: 0;
	position: relative;
	width: 100%;
}
article .spinner {
	left: 0;
	position: absolute;
	top: 0;
}
article .spinner span {
	display: none;
}
article.content h1 {
	font-size: 20px;
}
article.content,
article.edit {
	margin-top: 30px;
}
article.edit {
}
/* ... */

